[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Table.gd" type="Script" id=1]
[ext_resource path="res://scenes/Dealer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/CPU.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/User.tscn" type="PackedScene" id=4]

[node name="Table" type="Node2D"]
script = ExtResource( 1 )

[node name="Dealer" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 100 )

[node name="User" parent="." instance=ExtResource( 4 )]
position = Vector2( 200, 450 )

[node name="CPUS" type="Node2D" parent="."]
position = Vector2( 500, 0 )

[node name="CPU1" parent="CPUS" instance=ExtResource( 3 )]
position = Vector2( 0, 450 )

[node name="CPU2" parent="CPUS" instance=ExtResource( 3 )]
position = Vector2( 200, 350 )
rotation = -0.698132

[node name="CPU3" parent="CPUS" instance=ExtResource( 3 )]
position = Vector2( 350, 150 )
rotation = -1.0472

[connection signal="game_state" from="." to="." method="_on_Table_game_state"]
[connection signal="user_input" from="User" to="." method="_on_User_user_input"]
